--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -40,7 +40,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">Employee Name</th>
-                                <th scope="col">Amount</th>
+                                <th scope="col" class="amount-column">Amount</th>
                                 <th scope="col">Payment Month</th>
                                 <th scope="col">Payment Date</th>
                                 <th class="action-button">Action</th>
@@ -49,7 +49,7 @@
                         <tbody>
                             <tr *ngFor="let employeePayment of employeePaymentList">
                                 <td>{{employeePayment.employeeName}}</td>
-                                <td>{{employeePayment.amount | currency:'INR' }}</td>
+                                <td class="amount-column">{{employeePayment.amount | currency:'INR':'symbol':'0.0' }}</td>
                                 <td>{{employeePayment.paymentMonthYear || 'N/A' }}</td>
                                 <td>{{employeePayment.paymentDate | date: 'dd/MM/yyyy' || 'N/A' }}</td>
                                 <td class="action-button">
@@ -59,6 +59,11 @@
                                     <a href="javascript:void(0)" ngbTooltip="Delete"(click)="deleteEmployee(employeePayment)">
                                         <fa-icon [icon]="faDelete"></fa-icon>
                                     </a>
+                                </td>
+                            </tr>
+                            <tr class="total-amount">
+                                <td colspan="5">
+                                    <h5>Total - {{totalAmount | currency:'INR':'symbol':'0.0'}} </h5>
                                 </td>
                             </tr>
                             <tr *ngIf="!employeePaymentList.length">
