--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -72,7 +72,7 @@
                                     </a>
                                 </td>
                             </tr>
-                            <tr class="total-amount">
+                            <tr class="total-amount" *ngIf="projectPaymentList.length">
                                 <td colspan="5">
                                     <h5>Total - {{totalAmount | currency:'INR':'symbol':'0.0'}} </h5>
                                 </td>
