--- a/src/app/admin/pages/company-expenses/company-expenses.component.html
+++ b/src/app/admin/pages/company-expenses/company-expenses.component.html
@@ -56,7 +56,7 @@
                                     </a>
                                 </td>
                             </tr>
-                            <tr class="total-amount">
+                            <tr class="total-amount" *ngIf="expenseList.length">
                                 <td colspan="5">
                                     <h5>Total - {{totalAmount | currency:'INR':'symbol':'0.0'}} </h5>
                                 </td>
