--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -97,6 +97,9 @@
                 <a class="collapse-item" href="javascript:void(0)" routerLink="CompanyInvoice">
                     Company Invoice
                 </a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="CompanyDocuments">
+                    Company Documents
+                </a>
             </div>
         </div>
     </li>
