--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -15,28 +15,29 @@
                                 <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                 </div>
-                                <form class="user">
+                                <form class="user" [formGroup]="loginForm" (ngSubmit)="submitLogin()">
                                     <div class="form-group">
                                         <input type="email" class="form-control form-control-user"
                                             id="exampleInputEmail" aria-describedby="emailHelp"
-                                            placeholder="Enter Email Address...">
+                                            placeholder="Enter Email Address..."
+                                            autocomplete="off" maxlength="100" formControlName="emailAddress">
                                     </div>
                                     <div class="form-group">
                                         <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Password">
+                                            id="exampleInputPassword" placeholder="Password"
+                                            autocomplete="off" maxlength="100" formControlName="password">
                                     </div>
-                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                        Login
-                                    </a>
+
+                                    <div class="form-group" style="text-align: center">
+                                      
+                                        <input type="submit" class="btn btn-primary btn-user btn-block" value="Login" />
+                                    </div>
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
     </div>
-
 </div>
