--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -74,6 +74,9 @@
                 <a class="collapse-item" href="javascript:void(0)" routerLink="EmployeeProject">
                     Employee Project
                 </a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="EmployeeTaskDetails">
+                    Employee Task Details
+                </a>
             </div>
         </div>
     </li>
