--- a/src/app/admin/pages/employee-task-details/employee-task-details.component.html
+++ b/src/app/admin/pages/employee-task-details/employee-task-details.component.html
@@ -10,7 +10,7 @@
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
-                <table class="table table-stripped">
+                <table datatable [dtOptions]="dtOptions" class="row-border hover">
                     <thead>
                         <tr>
                             <th scope="col">Employee Name</th>
