--- a/src/app/employee/add-task/add-task.component.html
+++ b/src/app/employee/add-task/add-task.component.html
@@ -1,1 +1,64 @@
-<p>add-task works!</p>
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">
+        Add Employee Task
+    </h1>
+</div>
+
+<!-- Content Row -->
+
+<div class="card shadow mb-4">
+    <!-- Card Body -->
+    <div class="card-body">
+        <form class="form-horizontal" [formGroup]="employeeTaskForm" (ngSubmit)="saveEmployeeTask()">
+            <div class="row">
+                <div class="form-group col-lg-4">
+                    <label for="employee">Employee</label>
+                    <span class="red">*</span>
+                    <select name="employee" class="form-select col-lg-12" formControlName="employeeId"
+                    [ngClass]="{ 'is-invalid': submitted && f['employeeId'].errors }">
+                        <option value="0">-- Select Employee --</option>
+                        <option *ngFor="let employee of employeeList" [value]="employee.employeeId">{{employee.firstName}} {{employee.lastName}}</option>
+                    </select>
+                </div>
+                <div class="form-group col-lg-4">
+                    <label for="taskDate">Task Date</label>
+                    <div class="input-group">
+                        <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                            [maxDate]="maxDate" formControlName="taskDate" #taskDate="bsDatepicker" readonly
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false,  containerClass: 'theme-dark-blue'}">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="button" (click)="taskDate.toggle()">
+                                <fa-icon [icon]="faCalendar"></fa-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group col-lg-4">
+                    <label for="status">Status </label>
+                    <span class="red">*</span>
+                    <select name="status" class="form-select col-lg-12" formControlName="statusId"
+                        [ngClass]="{ 'is-invalid': submitted && f['statusId'].errors }">
+                        <option value="0">-- Select Status --</option>
+                        <option *ngFor="let status of statusList" [value]="status.id">{{status.name}}
+                        </option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-lg-12">
+                    <label for="subject">Subject</label>
+                    <span class="red">*</span>
+                    <input class="form-control" type="text" id="emailAddress" placeholder="Subject"
+                        autocomplete="off" maxlength="100" formControlName="subject"
+                        [ngClass]="{ 'is-invalid': submitted && f['subject'].errors }">
+                </div>
+            </div>
+
+            <div class="row submit-buttons">
+                <div class="form-group col-lg-12">
+                    <input type="submit" class="btn btn-success" value="Save" />
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
