--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -77,6 +77,9 @@
                 <a class="collapse-item" href="javascript:void(0)" routerLink="EmployeeTaskDetails">
                     Employee Task Details
                 </a>
+                <a class="collapse-item" href="javascript:void(0)" routerLink="AddEmployeeTask">
+                    Add Employee Task
+                </a>
             </div>
         </div>
     </li>
