--- a/src/app/employee/add-task/add-task.component.html
+++ b/src/app/employee/add-task/add-task.component.html
@@ -9,7 +9,8 @@
 <div class="card shadow mb-4">
     <!-- Card Body -->
     <div class="card-body">
-        <form class="form-horizontal" [formGroup]="employeeTaskForm" (ngSubmit)="saveEmployeeTask()">
+        <form class="form-horizontal" [formGroup]="employeeTaskForm"
+            (ngSubmit)="validateSubtask() && saveEmployeeTask()">
             <div class="row">
                 <div class="form-group col-lg-4">
                     <label for="employee">Employee</label>
@@ -53,32 +54,66 @@
                         maxlength="100" formControlName="subject"
                         [ngClass]="{ 'is-invalid': submitted && f['subject'].errors }">
                 </div>
-            </div>
+            </div>            
+
             <div class="row">
-                <div class="form-group col-lg-12">
+                <div class="col-lg-12">
                     <strong>
                         Subtask Detail
                     </strong>
-                    <input style="float: right" type="button" class="btn btn-primary btn-sm" value="Add New Subtask" />
+                    <a style="float: right" href="javascript:void(0)" ngbTooltip="Add new subtask"
+                        (click)="addNewSubtask()">
+                        <fa-icon [icon]="faAdd"></fa-icon>
+                        Add New Subtask
+                    </a>
+
                     <table class="table table-bordered" style="margin-top: 10px">
                         <tr>
-                            <td style="width: 85%;">
+                            <td style="width: 2%;">
+                                #
+                            </td>
+                            <td style="width: 73%;">
                                 Title
                             </td>
-                            <td style="width: 15%;">
+                            <td style="width: 20%;">
                                 Status
                             </td>
+                            <td style="width: 5%; text-align: center;">
+                                Action
+                            </td>
                         </tr>
-                        <tr>
+                        <tr *ngFor=" let subTask of subTaskDetailList; let i = index">
                             <td>
-                                <input type="text" id="title" placeholder="Title" autocomplete="off" maxlength="200">
+                                {{i + 1}}
                             </td>
                             <td>
-                                <select name="status">
-                                <option value="0">-- Select Status --</option>
-                                <option *ngFor="let status of statusList" [value]="status.id">{{status.name}}
-                                </option>
-                            </select>
+                                <div class="form-group col-lg-12">
+                                    <input class="form-control" type="text" id="title" placeholder="Title"
+                                        autocomplete="off" maxlength="200"
+                                        [ngClass]="{ 'is-invalid': !subTask.isValidTitle }"
+                                        formControlName="subTaskTitle">
+                                </div>
+                            </td>
+                            <td>
+                                <div class="form-group col-lg-12">
+                                    <select class="form-select" name="status"
+                                        [ngClass]="{ 'is-invalid': !subTask.isValidStatus }"
+                                        formControlName="subTasStatusId">
+                                        <option value="0">-- Select Status --</option>
+                                        <option *ngFor="let status of statusList" [value]="status.id">{{status.name}}
+                                        </option>
+                                    </select>
+                                </div>
+                            </td>
+                            <td style="text-align: center">
+                                <a href="javascript:void(0)" ngbTooltip="Remove" (click)="removeTask(i)">
+                                    <fa-icon [icon]="faDelete"></fa-icon>
+                                </a>
+                            </td>
+                        </tr>
+                        <tr *ngIf="!subTaskDetailList.length">
+                            <td colspan="4">
+                                No subtask added
                             </td>
                         </tr>
                     </table>
