--- a/src/app/employee/add-task/add-task.component.html
+++ b/src/app/employee/add-task/add-task.component.html
@@ -10,7 +10,7 @@
     <!-- Card Body -->
     <div class="card-body">
         <form class="form-horizontal" [formGroup]="employeeTaskForm"
-            (ngSubmit)="validateSubtask() && saveEmployeeTask()">
+            (ngSubmit)="saveEmployeeTask()">
             <div class="row">
                 <div class="form-group col-lg-4">
                     <label for="employee">Employee</label>
@@ -109,7 +109,7 @@
                 </ng-container>
             </div>
 
-            <div class="row sub-task-table">
+            <div class="row sub-task-table" *ngIf="!employeeTaskForm.get('subtaskDetails')?.value.length">
                 <div class="col-lg-12">
                     No subtask added
                 </div>
