note and validation changes

--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -153,9 +153,9 @@
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-6">
-                        <label for="notes">Note</label>
-                        <textarea type="text" name="notes" placeholder="Enter notes here" class="form-control "
-                            autocomplete="off" maxlength="200" formControlName="notes"></textarea>
+                        <label for="note">Note</label>
+                        <textarea type="text" name="notes" placeholder="Enter note here" class="form-control "
+                            autocomplete="off" maxlength="200" formControlName="note"></textarea>
                     </div>
                 </div>
 
