integrate employee board

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,15 +7,14 @@
       <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button">
         <span class="mr-2 d-none d-lg-inline text-gray-600 small">
           <h6>
-            Welcome Admin
+            Welcome {{username}}
             <fa-icon [icon]="faArrowRight" style="margin-left: 5px;"></fa-icon>
           </h6>
         </span>
       </a>
       <!-- Dropdown - User Information -->
-      <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in dropdown-content">
-
-        <a class="dropdown-item" href="javascript:void(0)" routerLink="Profile">
+      <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in dropdown-content" *ngIf="roleId == '1'">
+        <a class="dropdown-item" href="javascript:void(0)" routerLink="Profile" >
           <fa-icon [icon]="faProfile"></fa-icon> My Profile
         </a>
         <hr>
@@ -24,7 +23,12 @@
           <fa-icon [icon]="faSignOut"></fa-icon> Logout
         </a>
       </div>
+
+      <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in dropdown-content" *ngIf="roleId == '2'">
+        <a class="dropdown-item" href="javascript:void(0)" routerLink="">
+          <fa-icon [icon]="faSignOut"></fa-icon> Logout
+        </a>
+      </div>
     </li>
   </ul>
-
 </nav>
