--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-admin></app-admin>
+<div *ngIf="roleId == '1'">
+    <app-admin></app-admin>
+</div>
+
+<div *ngIf="roleId == '2'">
+    <app-employee-board></app-employee-board>
+</div>
