--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -97,7 +97,7 @@
         <div class="card-body">
             <form class="form-horizontal" [formGroup]="employeePaymentForm" (ngSubmit)="saveEmployeePayment()">
                 <div class="row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         <label for="employee">Employee</label>
                         <span class="red">*</span>
                         <select name="employee" class="form-select col-lg-12" formControlName="employeeId"
@@ -106,9 +106,8 @@
                             <option *ngFor="let employee of employeesList" [value]="employee.employeeId">{{employee.firstName}} {{employee.lastName}}</option>
                         </select>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-lg-6">
+
+                    <div class="form-group col-lg-4">
                         <label for="amount">Amount</label>
                         <span class="red">*</span>
                         <div class="my-1">
@@ -123,10 +122,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         <label for="year">Payment Month/Year</label>
                         <span class="red">*</span>
                         <input autocomplete="off" class="form-control" name="date" bsDatepicker [maxDate]="today"
@@ -135,9 +131,9 @@
                             [ngClass]="{ 'is-invalid': submitted && f['paymentMonthYear'].errors }">
                     </div>
                 </div>
+
                 <div class="row">
-                    <div class="form-group col-lg-6">
-                        
+                    <div class="form-group col-lg-4">                        
                         <label for="paymentdate">Payment Date</label>
                         <div class="input-group">
                             <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
@@ -152,10 +148,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-12">
                         <label for="notes">Note</label>
                         <textarea type="text" name="notes" placeholder="Enter notes here" class="form-control "
-                            autocomplete="off" maxlength="200" formControlName="notes"></textarea>
+                            autocomplete="off" rows="4" maxlength="200" formControlName="notes"></textarea>
                     </div>
                 </div>
 
