--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -163,10 +163,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-12">
                         <label for="notes">Note</label>
                         <textarea type="text" name="notes" placeholder="Enter notes here" class="form-control "
-                            autocomplete="off" maxlength="200" formControlName="notes"></textarea>
+                            autocomplete="off" rows="4" maxlength="200" formControlName="notes"></textarea>
                     </div>
                 </div>
 
